--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,27 @@
-name:Android CI/CD
+name: Android CI/CD
+on: 
+push:
+branches: [master]
+pull_request: branches: [master]
+jobs:
+build:
+runs-on: ubuntu:latest
+steps: 
+-uses: actions/checkout@v2
+- name: Setup Java JDK
+  uses: actions/setup-java@v3.14.1
+   - name: Build with Gradle
+   uses: gradle/actions@v4.4.0
+   run: ./gradlew build
+   -name: Upload APK
+   uses: actions/upload-artifact@2.1.4
+   with:
+   name: app
+   path: app/build/outputs/apk/debug/app-debug.apk
+   
+   
+          
+
 
 
 
